# georesistpy

./: .gitignore  README.md  create_env.sh  pyproject.toml  restart_app.sh
examples/: 2dk2.txt  demo.ipynb  sample_ert2d.csv  sample_ves.csv
georesistpy/: __init__.py  __main__.py  app.py  serve.py
georesistpy/forward/: __init__.py  forward1d.py  forward2d.py
georesistpy/inversion/: __init__.py  inversion1d.py  inversion2d.py  regularization.py
georesistpy/io/: __init__.py  formats.py  readers.py  writers.py
georesistpy/mesh/: __init__.py  mesh_builder.py
georesistpy/qc/: __init__.py  errors.py  filters.py  visualization.py
georesistpy/ui/: __init__.py  app.py  sidebar.py
georesistpy/ui/tabs/: __init__.py  export_tab.py  forward_tab.py  geometry_tab.py  import_tab.py  inversion_tab.py  qc_tab.py  viz_tab.py
georesistpy/utils/: __init__.py  arrays.py  doi.py  topography.py
georesistpy/visualization/: __init__.py  interactive.py  plots.py
