[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "georesistpy"
version = "0.2.2"
description = "Python library for Electrical Resistivity Tomography (ERT) data processing with Web UI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Yudha Setyawan", email = "yudhastyawan97@gmail.com"}
]
keywords = ["geophysics", "ERT", "resistivity", "tomography", "VES", "inversion"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy>=1.22",
    "scipy>=1.9",
    "pandas>=1.5",
    "matplotlib>=3.6",
    "SimPEG>=0.22",
    "discretize>=0.10",
]

[project.optional-dependencies]
ui = [
    "panel>=1.0",
    "holoviews>=1.15",
    "plotly>=5.10",
    "bokeh>=3.0",
    "param>=2.0",
]
export = [
    "rasterio>=1.3",
    "xarray>=2022.9",
    "netCDF4>=1.6",
]
all = [
    "georesistpy[ui,export]",
]

[project.scripts]
georesistpy = "georesistpy.app:main"

[tool.setuptools.packages.find]
include = ["georesistpy*"]
